k8s/api-live.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-api-deploy
  labels:
    app: circuit-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: circuit-api
  template:
    metadata:
      labels:
        app: circuit-api
    spec:
      containers:
      - name: circuit-api
        image: scistarter/circuit-api:master-0.1.276
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-api-service
spec:
  selector:
    app: circuit-api
  ports:
    - protocol: TCP
      port: 8000
