k8s/collator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-collator-deploy
  labels:
    app: circuit-collator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-collator
  template:
    metadata:
      labels:
        app: circuit-collator
    spec:
      containers:
      - name: circuit-collator
        # image: scistarter/circuit-collator:0.1.32
        image: scistarter/circuit-collator:0.1.40
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: ga4-access
          mountPath: "/etc/ga4"
          readOnly: true
        # - name: persistent-data-sqlite
        #   mountPath: "/var/lib/sqlite"
      volumes:
      - name: ga4-access
        secret:
          secretName: ga4
      # - name: persistent-data-sqlite
      #   persistentVolumeClaim:
      #     claimName: sqlite-storage-beta
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-collator-service
spec:
  selector:
    app: circuit-collator
  ports:
    - protocol: TCP
      port: 9000
