k8s/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: circuit-db-beta
  labels:
    app: postgres-beta
spec:
  serviceName: "postgres-beta"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-beta
  template:
    metadata:
      labels:
        app: postgres-beta
    spec:
      containers:
      - name: postgres-beta
        image: postgis/postgis:13-3.1
        ports:
        - containerPort: 5432
          name: postgresdb
        volumeMounts:
        - name: persistent-data
          mountPath: "/var/lib/postgresql"
      volumes:
      - name: persistent-data
        persistentVolumeClaim:
          claimName: db-storage-beta
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-beta
  labels:
    app: postgres-beta
spec:
  ports:
  - port: 5432
    name: postgres
  type: NodePort
  selector:
    app: postgres-beta
