k8s/frontend-live.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-frontend-deploy
  labels:
    app: circuit-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: circuit-frontend
  template:
    metadata:
      labels:
        app: circuit-frontend
    spec:
      containers:
      - name: circuit-frontend
        image: scistarter/circuit-frontend:master-0.1.425
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-frontend-service
spec:
  selector:
    app: circuit-frontend
  ports:
    - protocol: TCP
      port: 3000
