k8s/logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-logger-deploy-beta
  labels:
    app: circuit-logger-beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-logger-beta
  template:
    metadata:
      labels:
        app: circuit-logger-beta
    spec:
      containers:
      - name: circuit-logger-beta
        #image: scistarter/circuit-logger:0.1.5
        image: scistarter/circuit-logger:0.1.6
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-logger-service-beta
spec:
  selector:
    app: circuit-logger-beta
  ports:
    - protocol: TCP
      port: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-logger-deploy
  labels:
    app: circuit-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-logger
  template:
    metadata:
      labels:
        app: circuit-logger
    spec:
      containers:
      - name: circuit-logger
        image: scistarter/circuit-logger:0.1.5
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-logger-service
spec:
  selector:
    app: circuit-logger
  ports:
    - protocol: TCP
      port: 9000
