k8s/mailer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-mailer-deploy
  labels:
    app: circuit-mailer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-mailer
  template:
    metadata:
      labels:
        app: circuit-mailer
    spec:
      containers:
      - name: circuit-mailer
        #image: scistarter/circuit-mailer:0.1.19
        image: scistarter/circuit-mailer:0.1.20
        ports:
        - containerPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-mailer-service
spec:
  selector:
    app: circuit-mailer
  ports:
    - protocol: TCP
      port: 9100
