k8s/soon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-soon-deploy
  labels:
    app: circuit-soon
spec:
  replicas: 0
  selector:
    matchLabels:
      app: circuit-soon
  template:
    metadata:
      labels:
        app: circuit-soon
    spec:
      containers:
      - name: circuit-soon
        image: scistarter/circuit-soon:0.1.5
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-soon-service
spec:
  selector:
    app: circuit-soon
  ports:
    - protocol: TCP
      port: 8000
