k8s/uploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-uploader-deploy
  labels:
    app: circuit-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-uploader
  template:
    metadata:
      labels:
        app: circuit-uploader
    spec:
      containers:
      - name: circuit-uploader
        #image: scistarter/circuit-uploader:0.1.21
        image: scistarter/circuit-uploader:0.1.24
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: circuit-uploader-service
spec:
  selector:
    app: circuit-uploader
  ports:
    - protocol: TCP
      port: 9001
