k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-beta
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
      - beta.sciencenearme.org
      - www.sciencenearme.org
      - sciencenearme.org
    secretName: cert-beta
  rules:
  - host: beta.sciencenearme.org
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: circuit-api-service-beta
            port:
              number: 8000
      - path: /api/ui
        pathType: Prefix
        backend:
          service:
            name: circuit-api-service-beta
            port:
              number: 8000
      - path: /api/docs
        pathType: Prefix
        backend:
          service:
            name: circuit-api-service-beta
            port:
              number: 8000
      - path: /api/log
        pathType: Prefix
        backend:
          service:
            name: circuit-logger-service-beta
            port:
              number: 9000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: circuit-frontend-service-beta
            port:
              number: 3000
  - host: sciencenearme.org
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: circuit-soon-service
            port:
              number: 8000
  - host: www.sciencenearme.org
    http: *http_rules
